--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -1,26 +1,6 @@
-/* By Athlon Front-End Team */
-//
-// /* Core variables */
-// @import 'base/vars';
-//
-// /* CSS Reset */
-// @import 'base/reset';
-//
-// /* CSS print */
-// @import 'base/print';
-//
-// /* Fonts */
-// @import 'base/fonts';
-//
-// /* Mixins, helpers and functions */
-// @import 'base/mixins';
-//
-// /* Vendor */
-//
-// /* Components */
-//
-// /* Browser specific styles */
-// @import 'dirty/hacks';
-//
-// /* Demo Page styles */
-// @import 'demo';
+@import 'scene';
+
+body {
+  margin: 0;
+  background-color: #fff;
+}
