--- a/src/scss/scene.scss
+++ b/src/scss/scene.scss
@@ -1,9 +1,11 @@
 #dice3d {
   position: absolute;
-  top:10px;
-  bottom:10px;
-  left:10px;
-  right:10px;
+  width:1024px;
+  height:1024px;
+  left:50%;
+  top:50%;
+  transform: translate(-50%,-50%);
+
   visibility: hidden;
   background-image: url(../images/scene.png);
   background-repeat: no-repeat;
@@ -13,12 +15,13 @@
 
 #gameBox {
   position: absolute;
-  top:100px;
-  bottom:100px;
-  left:100px;
-  right:100px;
+  top:20px;
+  bottom:20px;
+  left:20px;
+  right:20px;
   background-image: url(../images/back.png);
-  background-repeat: no-repeat;
+  // background-repeat: no-repeat;
   background-position: center;
   background-size: contain;
+  overflow: hidden;
 }
